--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.31",
+    "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^11.1.0",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
     "next": "15.1.0",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^3.0.4",
+    "resend": "^4.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
